PARALLEL_GOALS.

* Basic combinators map, fold, fold_map, split_list, apply are
available as parameterized antiquotations, e.g. @{map 4} for lists of
quadruples.

* Renamed "pairself" to "apply2", in accordance to @{apply 2}.
INCOMPATIBILITY.

* Synchronized.value (ML) is actually synchronized (as in Scala):
subtle change of semantics with minimal potential for INCOMPATIBILITY.


*** System ***

* Support for Proof General and Isar TTY loop has been discontinued.
Minor INCOMPATIBILITY.

* JVM system property "isabelle.threads" determines size of Scala thread
pool, like Isabelle system option "threads" for ML.

* JVM system property "isabelle.laf" determines the default Swing
look-and-feel, via internal class name or symbolic name as in the jEdit
menu Global Options / Appearance.

* System option "pretty_margin" is superseded by "thy_output_margin",
which is also accessible via document antiquotation option "margin".
Only the margin for document output may be changed, but not the global
pretty printing: that is 76 for plain console output, and adapted
dynamically in GUI front-ends. Implementations of document
antiquotations need to observe the margin explicitly according to
Thy_Output.string_of_margin. Minor INCOMPATIBILITY.

* Historical command-line terminator ";" is no longer accepted.  Minor
INCOMPATIBILITY, use "isabelle update_semicolons" to remove obsolete
semicolons from theory sources.

* The Isabelle tool "update_cartouches" changes theory files to use
cartouches instead of old-style {* verbatim *} or `alt_string` tokens.



New in Isabelle2014 (August 2014)
---------------------------------

*** General ***

* Support for official Standard ML within the Isabelle context.
Command 'SML_file' reads and evaluates the given Standard ML file.
Toplevel bindings are stored within the theory context; the initial
environment is restricted to the Standard ML implementation of
Poly/ML, without the add-ons of Isabelle/ML.  Commands 'SML_import'